Fixed info text flow issue on Safari

--- a/src/components/host/host.css
+++ b/src/components/host/host.css
@@ -36,7 +36,7 @@
 .info{
   margin: 0;
   text-align: right;
-  margin-left: 10rem;
+  margin-left: 20em;
   font-size: calc(0.2rem + 1vh);
   padding-bottom: 1rem;
   padding-top: 1rem;
@@ -240,7 +240,7 @@ label {
 
 @media only screen and (max-width: 600px) {
   .person-host {
-    width: 100%;
+    width: 90%;
     height: 80%;
     position: relative;
     top: 10rem;
@@ -257,7 +257,7 @@ label {
 
   .info {
     text-align: left;
-     margin: 0;
+    margin: 0;
   }
 
   .form-submit {
@@ -287,11 +287,11 @@ label {
 
 @media only screen and (min-width: 1025px) {
   .person-host {
-    width: auto;
+    width: 40%;
     height: 110%;
     position: relative;
     z-index: 0;
-    top: 9rem;
+    top: 12.5em;
     left: 5rem;
   }
 
@@ -307,7 +307,10 @@ label {
   }
 }
 
-::i-block-chrome, .person-host {
-  width: 40%;
+_::-webkit-full-page-media, _:future, :root .safari_only {
+  .person-host {
+  width: auto;
+
+  }
 }
 
